adding default values for surveyUrl and numberAlive to experiment model, otherwise updates via ko mapping don't create the observables properly.

--- a/vcweb/bound/templates/bound/participate.html
+++ b/vcweb/bound/templates/bound/participate.html
@@ -78,7 +78,7 @@
     </p>
     <p>
     We will now move on to the <strong>paid rounds.</strong>
-    Before you continue, please <a data-bind='attr: { href: surveyUrl }'>fill out a questionnaire by clicking this link.</a>
+    Before you continue, please <a target='_blank' data-bind='attr: { href: surveyUrl }'>fill out a questionnaire by clicking this link.</a>
     </p>
     <ul class='pager'>
         <li class='next'>
