fixing issues with null / empty strings

--- a/vcweb/bound/templates/bound/participate.html
+++ b/vcweb/bound/templates/bound/participate.html
@@ -481,7 +481,7 @@ clicking "Ok, I'm Ready" until the 1-minute time limit is up.
         <br>
         <table class='table table-bordered table-condensed table-striped'>
             <tbody>
-                <tr><td>forest</td><td data-bind='text:otherGroupResourceLevel()'></td></tr>
+                <tr><td>forest</td><td data-bind='text:otherGroupResourceLevel'></td></tr>
                 <tr><td>average harvest</td><td data-bind='text:otherGroupAverageHarvest().toFixed(1)'></td></tr>
                 <tr><td>average earnings</td><td data-bind='text:otherGroupAverageStorage().toFixed(1)'></td></tr>
                 <tr><td>number alive</td><td data-bind='text:otherGroupNumberAlive'></td></tr>
